pl 73pre
	- some refs doco.
	- move Input_engraver into Paper_def
	- junk Interpreter
	- naming: Request_engraver -> Engraver, 
	- Music_iterator::next() -> process_and_next()
	- junk Voice_engravers
	- Span_bar, Span_bar_engraver
	- Vertical_align_engraver
	
*******
july 2
pl 72pre
	- \paper{} syntax: var = 1.0\pt;, with an Assoc array
	- sketch of MIDI Performer classes.
	- bf: memleak in parser
	- naming: Acceptor -> Translator
	- input: bf collisions.ly, scales.ly
	- bf: [r8 c8]
	- naming: Register -> Engraver
	- force \\ on identifiers
	- doco updates
	- musixtex T73 fonts

pl 70.mb
	- bf: find syntax in Variables.make
*****
july 1
pl 71pre
	- nested \melodic and \lyric constructs
	- init id's, Input_register aliases.
	- bf: notehead x-swap 
	- bf: auto-keys.
	- bf: first clef
	- junked \init_end; construct
	- Preparatory work for MIDI output:
		* Acceptor as baseclass for Register_group_register
		* Global_acceptor as interface of Register to Score
	- bf: empty voice
	- Lyrics: partially working
	- some doco updates (junks, mostly)


******
june 30


pl 70pre
	- bf: text Script
	- bf: Script::dir_i_ checks.
	- bf: script stacking
	- bf: Text_spanner::do_subst.
	- bf: Text_spanner::Text_spanner(Text_spanner&)
	- bf: script priority read from script.ini
	- bf: Script_def::do_equal_b
	- bf: script dims.
	- mudela: ; obligatory for \paper {}.
	- some cosmetic changes involving RTTI macros

*******
june 29
pl 69pre
	- bf: whole rest position, whole/half rest dots.
	- bf: scripts
	- reg termination
	- centered bars
	- bf: init of Tie::dir_i_ 
	- bf: Staff_side depends on staff_sym_
	- bf: Script::do_substitute_dependency() now implemented
	- more print info (also in output)
	- bf: Vertical_align_element
	- stemless beams now allowed (with warning)
	- bf: Rest_column::stem_l_ init
	- merge rests.ly with collisions.ly

pl 67.jcn3
	- rests under beam [c8 r c]

pl 67.jcn2
	- first attempt at rest collisions
	- rests.ly

pl 67.jcn1
	- beam stem length: beams.ly